# hcr-pypline

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/Limb_Ext_Stg01/: Stg01_Emb01_Ant01_background.csv  Stg01_Emb01_Ant01_contour.csv  Stg01_Emb01_Ant01_midline.csv  Stg01_Emb01_Ant02_background.csv  Stg01_Emb01_Ant02_contour.csv  Stg01_Emb01_Ant02_midline.csv  Stg01_Emb01_Lb01_background.csv  Stg01_Emb01_Lb01_contour.csv  Stg01_Emb01_Lb01_midline.csv  Stg01_Emb01_Lb02_background.csv  Stg01_Emb01_Lb02_contour.csv  Stg01_Emb01_Lb02_midline.csv  Stg01_Emb01_Mx01_background.csv  Stg01_Emb01_Mx01_contour.csv  Stg01_Emb01_Mx01_midline.csv  Stg01_Emb01_Mx02_background.csv  Stg01_Emb01_Mx02_contour.csv  Stg01_Emb01_Mx02_midline.csv  Stg01_Emb01_T101_background.csv  Stg01_Emb01_T101_contour.csv  Stg01_Emb01_T101_midline.csv  Stg01_Emb01_T102_background.csv  Stg01_Emb01_T102_contour.csv  Stg01_Emb01_T102_midline.csv  Stg01_Emb01_background.csv  Stg01_Emb01_contour.csv  Stg01_Emb01_midline.csv  (+78 more)
hcrp/: __init__.py  core.py  hcr.py  labelling.py  plotting.py  segmentation.py
media/: legs_test.csv  lines.csv  points.csv  points_2.csv  points_test.csv
pymorphogen/: core.py  hcr.py
scripts/: get_z_ranges.py  hcr.py  hcr_script.py  hcr_test.py  itk_watershed.py  label.py  points_annotater.py  rag_test.py  segment.ipynb  segment.py  segment2.py  selectors_test.py  shapes_annotater.py  test.py  tool_test.py  watershed.py
tests/: big_fish.py  big_fish_decomposition.py  minimal_cellpose_bug.py  test_cellpose.py  test_hcr.py  test_labelling.py  test_segment.py  test_z_stack.py
