[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hcrp"
version = "0.1"
dependencies = ["numpy", "scikit-learn",  "scikit-image", "scipy", "matplotlib", "pandas", "shapely", "opencv-python", "big-fish"]


[project.optional-dependencies]
test = [
    "black==21.9b0",
    "pytest==6.2.5",
]